# personal-agnet

./: Makefile  cli.py  pyproject.toml
api/app/: main.py  main_mcp.py  observability.py
api/app/configs/: constants.py  schemas.py  settings.py
api/app/configs/schemas/: chat.py
api/app/mcp/: git.py  system.py
api/app/routers/: __init__.py  _ask_user.py  _chat.py  _prompts.py  _router.py  chat.py
api/app/routers/agent/: router.py
api/app/routers/google_agent/: router.py
api/app/routers/tools_streamable_http/: router.py
api/app/security/: auth.py
api/app/skills/: __init__.py
api/app/skills/filesystem/: inspection.md
api/app/skills/git_local/: commit-flow.md
api/app/skills/github/: pr-flow.md
api/app/skills/logfire/: query-style.md
api/app/utils/: mcp_utils.py  router_utils.py
core/agent/: google.py  local.py
core/client/: mcp.py
core/entity/: db.py  models.py
core/memory/: facts.py  service.py  summaries.py  tools.py
core/skills/: __init__.py
mcp_server/: fs.py  main.py
personal_agent/: main.py  main_mcp.py
personal_agent/agents/google/: __init__.py  router.py
personal_agent/agents/local/: __init__.py  router.py
personal_agent/api/: chat_route.py
personal_agent/memory/: db.py  facts.py  service.py  summaries.py  tools.py
personal_agent/skills/: __init__.py
personal_agent/skills/git_local/: shell-policy.md
personal_agent/skills/shared/: plan-then-execute.md
personal_agent/utils/: mcp_utils.py
