[project]
name = "personal-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "fastmcp>=3.3.0",
    "google-genai>=2.3.0",
    "logfire[fastapi,httpx,system-metrics]>=3.0.0",
    "makefile>=1.1.0",
    "openai>=2.36.0",
    "pydantic>=2.13.4",
    "pydantic-ai>=1.96.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.47.0",
]
